@@ -1,39 +1,61 @@
-Chat-App-Frontend
-Overview
-Chat-App-Frontend is the user interface for a desktop-based chat application, built with Java and JavaFX. This project provides an interactive and visually appealing experience for users to register, log in, manage friends, send instant messages, and more. It connects to a PHP-based backend server (hosted in a separate repository) to handle data storage, user authentication, and real-time messaging functionality.
+# Chat App Frontend
 
-Features
-User Authentication: Register and log in with a username and password, with an option to remember login details.
-Friend Management: Search for users, send/accept friend requests, and block unwanted users.
-Instant Messaging: Send and receive messages in real-time with friends.
-Profile Customization: Upload and display profile photos.
-Notifications: View friend requests and unread message alerts.
-Multilingual Support: Choose between languages like English, Turkish, and Norwegian.
-Responsive UI: A clean, desktop-optimized interface with animations and theme options (e.g., dark mode in development).
-Technologies Used
-Java: Core programming language for the application logic.
-JavaFX: Framework for building the graphical user interface.
-PHP Backend: Communicates with the frontend via HTTP requests (backend code in a separate repository).
-JSON: Used for data exchange between frontend and backend.
-HTTP Requests: Facilitated by HttpURLConnection for server communication.
-Getting Started
-Prerequisites
-Java Development Kit (JDK): Version 8 or higher.
-JavaFX: Included with JDK 8, or configure separately for later versions (e.g., OpenJFX).
-IDE: Recommended tools like IntelliJ IDEA or Eclipse with JavaFX support.
-Backend Server: A running PHP server (e.g., at https://calm-mountain-05477.herokuapp.com/) with the corresponding backend repository deployed.
-Installation
-Clone the Repository:
-bash
+This is a messaging application built with Java and JavaFX. Users can register themselves and add their friends on the platform, exactly like any other messaging app like WhatsApp and Messenger. This repository contains the frontend code of the application, aimed for desktop usage purposes.
 
-Collapse
+## Table of Contents
+- [Features](#features)
+- [Technologies Used](#technologies-used)
+- [Project Setup and Installation](#project-setup-and-installation)
+- [Usage](#usage)
+- [Contributing](#contributing)
+- [License](#license)
+- [Contact Information](#contact-information)
+- [Screenshots](#screenshots)
 
-Wrap
+## Features
+- User Registration and Login
+- Adding Friends
+- Changing Profile Picture
+- Messaging
+- Register Controllers
 
-Copy
-git clone https://github.com/JakobGokpinar/Chat-App-Frontend.git
-cd Chat-App-Frontend
-Set Up JavaFX:
-If using JDK 8, JavaFX is included. For JDK 11+, download OpenJFX and configure your IDE/project:
-Add JavaFX libraries to your project’s module path.
-Update VM options: --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml.
+## Technologies Used
+- Java
+- JavaFX
+
+## Project Setup and Installation
+
+### Prerequisites
+- Java Development Kit (JDK) 8 or higher
+- JavaFX SDK
+- An IDE such as IntelliJ IDEA or Eclipse
+
+### Installation Steps
+1. Clone the repository:
+    ```bash
+    git clone https://github.com/yourusername/chat-app-frontend.git
+    ```
+2. Open the project in your IDE.
+3. Set up JavaFX SDK in your IDE.
+4. Build and run the project.
+
+## Usage
+1. Launch the application.
+2. Register a new user or log in with existing credentials.
+3. Add friends using their username.
+4. Start messaging your friends.
+5. Change your profile picture from the settings menu.
+
+## Contributing
+Contributions are welcome! Please follow these steps to contribute:
+1. Fork the repository.
+2. Create a new branch: `git checkout -b feature/your-feature-name`.
+3. Make your changes and commit them: `git commit -m 'Add some feature'`.
+4. Push to the branch: `git push origin feature/your-feature-name`.
+5. Open a pull request.
+
+## License
+This project is licensed under the MIT License. See the [LICENSE](LICENSE) file for details.
+
+## Contact Information
+For any questions or support, please contact JakobGokpinar at [your-email@example.com](mailto:your-email@example.com).
